# teesocket

./: CMakeLists.txt  dbgwait.c  dumbsdk.c  logger.c  main.c  teesocket.kdev4  teesocksdk.c
.kdev4/: teesocket.kdev4
include/: dbgwait.h  dumbsdk.h  logger.h  sharefunc.h  teesocket.h  teesocket_internal.h  teesocksdk.h
test/: usr1_and_read_file.py
